syntax = "proto3";

package org.wfa.measurement.api.v2alpha.eventtemplates;

option java_package = "org.wfanet.measurement.api.v2alpha.eventtemplates";
option java_multiple_files = true;
import "wfa/measurement/api/v2alpha/event_annotations.proto";

message TestBannerTemplate {
  option (.wfa.measurement.api.v2alpha.event_template) = {
    display_name: "Banner Ad"
    description: "A simple Event Template for a banner ad."
  };
}